fix: wrap summaries with markdown wrapper

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,6 +91,10 @@ html {
   margin: 16px 0px;
 }
 
+.summaryTags p {
+  margin: 0px 0px;
+}
+
 .markdownStyles a {
   text-decoration: underline;
 }
